Created folders 'lib' and 'services' to separate the code

--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^12.0.7",
-    "@types/styled-components": "^5.1.18",
     "axios": "^0.24.0",
     "next": "12.0.5",
     "react": "17.0.2",
@@ -18,11 +18,23 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.7",
+    "@babel/preset-env": "^7.16.8",
+    "@babel/preset-typescript": "^7.16.7",
+    "@testing-library/dom": "^8.11.1",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@types/jest": "^27.4.0",
     "@types/node": "^16.11.10",
     "@types/react": "^17.0.37",
+    "@types/styled-components": "^5.1.19",
+    "babel-jest": "^27.4.6",
     "babel-plugin-styled-components": "^2.0.1",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
+    "jest": "^27.4.7",
+    "jest-dom": "^4.0.0",
+    "ts-jest": "^27.1.2",
     "typescript": "^4.5.2"
   }
 }
