--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest --detectOpenHandles"
   },
   "dependencies": {
-    "@mdx-js/loader": "^1.6.22",
-    "@next/mdx": "^12.0.7",
     "axios": "^0.24.0",
+    "jest-extended": "^1.2.0",
     "next": "12.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
