Add .env and removed theme.ts

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-NEXT_PUBLIC_BASEURL=http://200.144.93.54/api/3/action/
+NEXT_PUBLIC_BASEURL = http://dadosabertos.unifesp.br/api/3/action/
+
+SITE_NAME = Dados Abertos
+SITE_EMAIL = algum@email.com
