--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "12.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-query": "^3.34.11",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
