--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_BASEURL = http://demo.ckan.org/api/3/action/
-
-API_KEY = 5f9a33e8-4d2a-4ec0-be10-0c81261716a2
+NEXT_PUBLIC_BASEURL = http://dadosabertos.unifesp.br/api/3/action/
+# NEXT_PUBLIC_BASEURL = http://demo.ckan.org/api/3/action/
+# API_KEY = 5f9a33e8-4d2a-4ec0-be10-0c81261716a2
