--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "test": "jest --detectOpenHandles --watch"
   },
   "dependencies": {
+    "@stitches/core": "^1.2.8",
     "axios": "^0.24.0",
     "jest-extended": "^1.2.0",
     "next": "12.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "react-query": "^3.34.11",
-    "styled-components": "^5.3.3"
+    "react-query": "^3.34.11"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
@@ -28,7 +28,6 @@
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.10",
     "@types/react": "^17.0.37",
-    "@types/styled-components": "^5.1.19",
     "babel-jest": "^27.4.6",
     "babel-plugin-styled-components": "^2.0.1",
     "eslint": "7",
