--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@stitches/core": "^1.2.8",
     "axios": "^0.24.0",
     "jest-extended": "^1.2.0",
-    "next": "12.0.5",
+    "next": "^12.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
